Fix walkthrougth spacing in iPad

--- a/src/app/user/profesional-list/profesional-list.page.scss
+++ b/src/app/user/profesional-list/profesional-list.page.scss
@@ -21,6 +21,7 @@
   background-repeat: no-repeat;
   background-position-x: 98%;
   background-position-y: 50%;
+  text-indent: calc(42%);
 }
 .filt-icon {
   font-size: 11px;
